<?xml version="1.0"?>

<resources>

    <string name="app_name">Brain Trainer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">default</string>

    <string name="nav_header_subtitle">Username</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_profile">Profile</string>

    <string name="menu_settings">Settings</string>

    <string name="menu_help">Help</string>

    <string name="menu_about">About</string>
    <string name="plays_start">Plays: 0</string>
    <string name="go_text">GO</string>
    <string name="timer_string">30s</string>
    <string name="starting_score">0/0</string>
    <string name="play_again_text">Play again</string>
    <string name="fake_num">11</string>
    <string name="tag_first">0</string>
    <string name="tag_second">1</string>
    <string name="tag_third">2</string>
    <string name="tag_fourth">3</string>
    <string name="starting_question">2+3</string>
    <string name="history_text">History</string>
    <string name="username">IN: Dauntless</string>
    <string name="highscore">Highest: 0</string>
    <string name="about_info">App: Brain Trainer\nDeveloper: DauntlessDev\nVersion: 1.0</string>
    <string name="confirm_tex">Confirm Password</string>
    <string name="create_text">Create Account</string>
    <string name="hint_pass">Password</string>
    <string name="hint_user">Username</string>
    <string name="create_now">Create now to have your own diary!</string>
    <string name="login">Login</string>
    <string name="username_log">Username</string>
    <string name="password">Password</string>
    <string name="signup_info">Don\'t have an account? Sign up</string>

</resources>