<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/avatar_width"
        android:layout_height="@dimen/avaterheight"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatarprof" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginhistory"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/history_text"
        android:textSize="@dimen/historysize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/switchside"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/switchside"
            android:text="@string/username"
            android:textSize="@dimen/playtext"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/highestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/switchside"
            android:text="@string/highscore"
            android:textSize="@dimen/playtext"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/playsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plays_start"
            android:textSize="@dimen/playtext"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_hiehgt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>